# gradio_crystal3d

./: .gitignore  AGENT.md  README.md  pyproject.toml
.trae/documents/: reorganize_gradio_component_structure.md
backend/gradio_crystal3d/: __init__.py  crystal3d.py  crystal3d.pyi
demo/: Si_mp-149.cif  __init__.py  app.py  space.py
examples/: example_crystal3d.py  page.py
frontend/: Example.svelte  Index.svelte  gradio.config.js  package-lock.json  package.json
tests/: test_class_method.py  test_component.py  test_crystal3d.py  test_minimal_crystal.html  test_minimal_crystal.py  test_minimal_protein.html  test_minimal_protein.py
